--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular/animations": "^11.0.0",
     "@angular/cdk": "^6.2.0",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/forms": "^11.0.0",
     "@angular/http": "^6.1.0",
+    "@angular/localize": "^11.0.0",
     "@angular/material": "^6.4.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/pwa": "^0.7.3",
-    "@angular/router": "^8.2.14",
-    "@angular/service-worker": "^8.2.14",
+    "@angular/router": "^11.0.0",
+    "@angular/service-worker": "^11.0.0",
     "core-js": "^2.5.7",
     "exif-js": "^2.3.0",
     "marked": "^0.4.0",
     "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.6.3",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "^6.1.3",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular/cli": "^11.0.1",
+    "@angular/compiler-cli": "^11.0.0",
+    "@angular/language-service": "^11.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/marked": "^0.4.0",
@@ -53,6 +54,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.5.3"
+    "typescript": "^4.0.5"
   }
 }
