--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "exif-js": "^2.3.0",
     "marked": "^0.4.0",
     "material-design-icons": "^3.0.1",
+    "ng-lazyload-image": "^9.1.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.6.3",
     "zone.js": "~0.10.3"
